Time: 36 ms (27.29%), Space: 68.1 MB (10.75%) - LeetHub